Trying to fix font not showing up on netlify

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: 'Inter';
+  src: url('../public/fonts/Inter/static/Inter-Medium.ttf');
+}
 
 * {
   box-sizing: border-box;
