--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,5 +1,7 @@
-// importing Inter font
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@font-face {
+	font-family: 'Inter';
+	src: url('../public/fonts/Inter/static/Inter-Medium.ttf');
+}
 
 @mixin flex-container($direction, $justify-content, $align-items) {
 	display: flex;
